syntax = "proto3";

package helloworld;

option java_package = "in.tutorial.grpc";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
